recommedation and views basic in client

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -61,6 +61,7 @@
         <script type="text/javascript" src="services/cart.service.js"></script>
         <script type="text/javascript" src="services/socket.service.js"></script>
         <script type="text/javascript" src="services/store.service.js"></script>
+        <script type="text/javascript" src="services/view.service.js"></script>
         
         <!-- Directives -->
         <script type="text/javascript" src="directives/headphonesItem.js"></script>
