--- a/server/views/index.html
+++ b/server/views/index.html
@@ -37,7 +37,7 @@
         <section class="mainView" ui-view="">
         </section>
         <footer class="footer">
-        <p>&copy; Ori Blau, Sagi Yosef, Noam Vaisbuch and </p>
+        <p>&copy; Ori Blau, Sagi Yosef, Noam Vaisbuch and Roni Megidish</p>
         </footer>
         
         <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
