--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,8 @@
 body {
 	background-color: #ffffff;
 	font-family: basicFont,Monospace,sans-serif;
+	position: absolute !important;
+    margin-left: 8% !important;
 }
 
 md-dialog {
