--- a/server/views/index.html
+++ b/server/views/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html ng-app="headphonesStore">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Hear Everything</title>
 		<link rel="shortcut icon" href="public/Images/Favicon.png"/> 
         <link rel="stylesheet" type="text/css" href="node_modules/angular-material/angular-material.min.css"/>
+        <link rel="stylesheet" type="text/css" href="node_modules/nvd3/build/nv.d3.min.css"/>
 		<link rel="stylesheet" type="text/css" href="public/style.css"/> 
 	</head>
     <body>
@@ -29,11 +30,13 @@
                         <md-menu-item>
                             <md-button ui-sref="manager-headphonestypes"> Manage Headphones Types </md-button>
                         </md-menu-item>
+                        <md-menu-item>
+                            <md-button ui-sref="manager-statistics"> Statistics </md-button>
+                        </md-menu-item>
                     </md-menu-content>
                 </md-menu>
             </nav>
         </header>
-        
         <section class="mainView" ui-view="">
         </section>
         <footer class="footer">
@@ -50,7 +53,9 @@
         <script type="text/javascript" src="node_modules/angular-material/angular-material.min.js"></script>
         <script type="text/javascript" src="/socket.io/socket.io.js"></script>
         <script type="text/javascript" src="node_modules/ng-file-upload/dist/ng-file-upload.min.js"></script>
-        <script type="text/javascript" src="node_modules/d3/dist/d3.js"></script>
+        <script type="text/javascript" src="node_modules/d3/d3.js"></script>
+        <script type="text/javascript" src="node_modules/nvd3/build/nv.d3.min.js"></script>
+        <script type="text/javascript" src="node_modules/angular-nvd3/dist/angular-nvd3.js"></script>
 
         <!-- Angular App -->
         <script type="text/javascript" src="app.js"></script>
@@ -77,6 +82,7 @@
         <script type="text/javascript" src="components/cart/cart.component.js"></script>
         <script type="text/javascript" src="components/manage.headphones/manage.headphones.component.js"></script>
         <script type="text/javascript" src="components/manage.headphones.types/manage.headphones.types.component.js"></script>
+        <script type="text/javascript" src="components/manager.statistics/manager.statistics.component.js"></script>
 
         <!-- APIs -->
         <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCWBqFys-8rdAyBvJ5yZI2KFZfcbVzJU8Q"></script>
