--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,8 @@ body {
 	background-color: #ffffff;
 	font-family: basicFont,Monospace,sans-serif;
 	position: absolute !important;
-    margin-left: 8% !important;
+	margin-left: 8% !important;
+	width: auto !important;
 }
 
 md-dialog {
@@ -229,7 +230,7 @@ a, a:hover, a:focus{
 .mainView{
 	background-color: #ffffff;
 	margin: 0 auto 50px auto;
-	width: 1300px;
+	width: 1300px !important;
 }
 .cartTitle{
 	margin-left: 10px;
