--- a/server/views/index.html
+++ b/server/views/index.html
@@ -60,6 +60,8 @@
         <!-- Angular App -->
         <script type="text/javascript" src="app.js"></script>
         <script type="text/javascript" src="config/routes.config.js"></script>
+        <script type="text/javascript" src="manager.module.js"></script>
+        <script type="text/javascript" src="cart.module.js"></script>
         
         <!-- Services -->
         <script type="text/javascript" src="services/headphones.service.js"></script>
