--- a/client/components/all.headphones/all.headphones.component.html
+++ b/client/components/all.headphones/all.headphones.component.html
@@ -1,14 +1,9 @@
-<div class="headphones-filters">
-    Search by name:
-    <input class="form-control" type="text" ng-model="ctrl.searchText"/>
-    <select class="form-control" ng-model="ctrl.orderbyfilter">
-        <option selected value="">select filter</option>
-        <option value="+price">price - low to high </option>
-        <option value="-price">price - high to low</option>
-    </select>
-</div>
 <section layout="row">
     <aside flex="15" class="checkbox-filters">
+        <div>
+            <h3>Search by name:</h3>
+            <input class="form-control" type="text" ng-model="ctrl.searchText"/>
+        </div>
         <div class="aside-filter-header">
             <h3 class="">Filter By Type:</h3>
         </div>        
@@ -27,12 +22,17 @@
                 {{cancelLvl.value}}
             </label>
         </div>
+        <div>
+            <md-input-container>
+                <input type="button" value="SEARCH" name="submit" ng-click="ctrl.search()">
+            </md-input-container>
+        </div>
     </aside>
     <div flex class="">        
         <div class="items" layout="row" layout-wrap>
-            <headphones-item flex="33" ng-repeat="headphones in (ctrl.filteredHeadphones = (ctrl.headphones | filter:{name:ctrl.searchText} | filter:ctrl.filterByType | filter:ctrl.filterByNoiseCancelingLevel | orderBy:ctrl.orderbyfilter))" headphones="headphones" add-to-cart="ctrl.addToCart" show-price="ctrl.showPrice">
+            <headphones-item flex="33" ng-repeat="headphones in ctrl.headphones" headphones="headphones" add-to-cart="ctrl.addToCart" show-price="ctrl.showPrice">
             </headphones-item>
-            <h4 class="searchResultErr" ng-if="!ctrl.filteredHeadphones.length">There are no matched items</h4>
+            <h4 class="searchResultErr" ng-if="!ctrl.headphones.length">There are no matched items</h4>
         </div>
     </div>
 </section>
