--- a/server/views/index.html
+++ b/server/views/index.html
@@ -50,7 +50,7 @@
         <script type="text/javascript" src="/node_modules/angular-aria/angular-aria.js"></script>
         <script type="text/javascript" src="/node_modules/angular-animate/angular-animate.js"></script>
         <script type="text/javascript" src="/node_modules/angular-messages/angular-messages.min.js"></script>
-        <script type="text/javascript" src="node_modules/angular-material/angular-material.min.js"></script>
+        <script type="text/javascript" src="node_modules/angular-material/angular-material.js"></script>
         <script type="text/javascript" src="/socket.io/socket.io.js"></script>
         <script type="text/javascript" src="node_modules/ng-file-upload/dist/ng-file-upload.min.js"></script>
         <script type="text/javascript" src="node_modules/d3/d3.js"></script>
