--- a/public/style.css
+++ b/public/style.css
@@ -100,6 +100,11 @@ a, a:hover, a:focus{
 	width: 600px;
 	margin: 5px auto 30px auto;
 }
+
+.headphones-filters md-input-container{
+	vertical-align: -webkit-baseline-middle;
+    padding-top: 10px;
+}
 .headphonesImg{
     height: 160px;
     width: 160px;
