--- a/client/pages/templates/cartIcon.html
+++ b/client/pages/templates/cartIcon.html
@@ -1,4 +1,5 @@
 <a ui-sref="cart" class="shoppingCart">
+	<!-- <ng-md-icon icon="shopping_cart" style="fill:white" size="37"></ng-md-icon>  -->
 	<img src="public/Images/Cart.png" width="37" height="37"/>
 	<span class="cartCounter" ng-if="cartAmount != 0">{{cartAmount}}</span>
 </a> 
