--- a/server/views/index.html
+++ b/server/views/index.html
@@ -14,7 +14,7 @@
                <cart-icon></cart-icon>             
             </div>
             <div flex="15" class="">
-                <a ui-sref="home"><img class="" src="public/Images/Icon.png" width="200"/></a>
+                <a ui-sref="home"><img src="public/Images/Icon.png" width="200"/></a>
             </div>
 			<nav flex="60" layout="row" layout-align="start center" class="headphones-store-nav-bar">
 				<li><a ui-sref="home" ui-sref-active="active"> Home </a></li>
@@ -22,7 +22,7 @@
                 <li><a ui-sref="stores" ui-sref-active="active"> Stores </a></li>
 				<li><a ui-sref="about" ui-sref-active="active"> About Us </a></li>
                 <md-menu md-offset="0 40">
-                    <a ng-mouseenter="$mdMenu.open()">Manager</a>
+                    <a ng-mouseenter="$mdMenu.open()">Management</a>
                     <md-menu-content ng-mouseleave="$mdMenu.close()">
                         <md-menu-item>                            
                             <md-button ui-sref="manager-headphones"> Manage Headphones </md-button>                            
@@ -40,7 +40,7 @@
         <section class="mainView" ui-view="">
         </section>
         <footer class="footer">
-        <p>&copy; Ori Blau, Sagi Yosef, Noam Vaisbuch and Roni Megidish</p>
+            <p>&copy; 2018 - Ori Blau, Sagi Yosef, Noam Vaisbuch and Roni Megidish</p>
         </footer>
         
         <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
