--- a/client/components/cart/cart.component.html
+++ b/client/components/cart/cart.component.html
@@ -1,3 +1,8 @@
+<div class="cover_img" style="height: 156px; background-position: inherit;">
+	<div class="foryou_title" style=" width: 220px; margin-top: 58px;">
+		<canvas id="titlecanvas" height="100" width="400"></canvas>
+	</div>
+</div>
 <div class="" layout-align="start center">
 	<h3 class="cartTitle" ng-if="ctrl.cartItems.length">SHOPPING CART</h3>
 	<section layout="row" layout-align="center" layout-wrap>
