--- a/client/components/manage.headphones/manage.headphones.component.html
+++ b/client/components/manage.headphones/manage.headphones.component.html
@@ -1,3 +1,8 @@
+<div class="cover_img" style="height: 156px; background-position: inherit;">
+    <div class="foryou_title" style=" width: 320px; margin-top: 58px;">
+        <canvas id="titlecanvas" height="100" width="400"></canvas>
+    </div>
+</div>
 <div class="headphones-filters">
     Say something on twitter:
     <input class="form-control" type="text" ng-model="ctrl.twit"/>
