--- a/client/components/stores/stores.component.html
+++ b/client/components/stores/stores.component.html
@@ -1,4 +1,8 @@
-<h2 class="storesCompTitle">Our Stores</h2>
+<div class="cover_img" style="height: 156px; background-position: inherit;">
+    <div class="foryou_title" style=" width: 260px; margin-top: 58px;">
+        <canvas id="titlecanvas" height="100" width="400"></canvas>
+    </div>
+</div>
 <div style="position: relative;" layout="row" layout-align="center">
     <md-input-container>
         <label>Name</label>
