--- a/client/components/all.headphones/all.headphones.component.html
+++ b/client/components/all.headphones/all.headphones.component.html
@@ -1,3 +1,8 @@
+<div class="cover_img" style="height: 156px; background-position: inherit;">
+    <div class="foryou_title" style=" width: 260px; margin-top: 58px;">
+        <canvas id="titlecanvas" height="100" width="400"></canvas>
+    </div>
+</div>
 <section layout="row">
     <aside flex="15" class="checkbox-filters">
         <div>
