--- a/client/components/manager.statistics/manager.statistics.component.html
+++ b/client/components/manager.statistics/manager.statistics.component.html
@@ -1,3 +1,8 @@
+<div class="cover_img" style="height: 156px; background-position: inherit;">
+    <div class="foryou_title" style=" width: 230px; margin-top: 58px;">
+        <canvas id="titlecanvas" height="100" width="400"></canvas>
+    </div>
+</div>
 <div>
     <h4>Segmentation of headphones brands</h4>
     <nvd3 options="ctrl.options" data="ctrl.headphones"></nvd3>
