--- a/client/pages/templates/store.html
+++ b/client/pages/templates/store.html
@@ -1,8 +1,5 @@
-<div flex="33" class="storeItem">
-    <div>
-        <h3 class="storeItemTitle">{{store.name}}</h3>
-        <div>Address: {{store.address}}</div>
-        <div>City: {{store.city}}</div>
-        <div>Phone: {{store.phone}}</div>
-    </div>
+<div class="md-list-item-text" layout="column"> 
+    <h3 class="storeItemTitle">{{store.name}}</h3>
+    <div>Address: {{store.address}}, {{store.city}}</div>
+    <div>Phone: {{store.phone}}</div>
 </div>
