--- a/client/components/cart/cart.component.html
+++ b/client/components/cart/cart.component.html
@@ -3,9 +3,8 @@
 		<canvas id="titlecanvas" height="100" width="400"></canvas>
 	</div>
 </div>
-<div class="" layout-align="start center">
-	<h3 class="cartTitle" ng-if="ctrl.cartItems.length">SHOPPING CART</h3>
-	<section layout="row" layout-align="center" layout-wrap>
+<div layout-align="start center">
+	<section layout="row" layout-align="space-around" layout-wrap>
 		<headphones-item ng-repeat="headphones in ctrl.cartItems" headphones="headphones.item" add-to-cart="ctrl.addToCart" show-price="ctrl.showPrice">
 			<div class="qtyWrap">
 				<lable>Quantity:</lable>
@@ -15,11 +14,16 @@
 			<md-button class="md-primary" ng-click="ctrl.removeItem(headphones)">Remove</md-button>
 		</headphones-item>
 	</section>
-	<h3 class="cart-total" ng-if="ctrl.cartItems.length"> TOTAL:
+</div>
+<div class="divider"></div>
+<div layout="column" layout-align="center center">
+	<h3 ng-if="ctrl.cartItems.length"> TOTAL:
 		<span> {{ ctrl.totalUSDPrice | currency}}
 			<span ng-if="ctrl.totalNISPrice">({{ctrl.totalNISPrice}}₪)</span>
 		</span>
-		</h3>
-	<md-button class="Checkout md-primary md-raised" ng-click="ctrl.checkout($event)" ng-if="ctrl.cartItems.length">Checkout Now</md-button>
-	<h3 ng-if="!ctrl.cartItems.length">You have no items in your shopping cart.</h3>
+	</h3>
+	<md-input-container class="no-margin">
+		<md-button class="Checkout md-primary md-raised" ng-click="ctrl.checkout($event)" ng-if="ctrl.cartItems.length">Checkout Now</md-button>
+	</md-input-container>
 </div>
+<h3 ng-if="!ctrl.cartItems.length">You have no items in your shopping cart.</h3>
