--- a/public/style.css
+++ b/public/style.css
@@ -350,8 +350,9 @@ aside.filters{
 }
 
 .headphonesCategory {
-	font-weight: bold; 
 	text-decoration: underline;
+    font-weight: 500;
+    text-shadow: 1px 1px rgba(0,0,0,0.87);
 }
 
 .aboutTitle {
