--- a/client/components/headphones/headphones.component.html
+++ b/client/components/headphones/headphones.component.html
@@ -6,7 +6,7 @@
 		<p> Type: {{ctrl.headphones.headphonesType}} </p>
 		<p> Noise Canceling Level: {{ctrl.headphones.noiseCancelingLevel}} </p>
 		<p> {{ctrl.headphones.description }} </p>
-		<h4> {{ctrl.headphones.price | currency}} | 30g</h4>
+		<h4> {{ctrl.headphones.price | currency}}</h4>
 		<add-to-cart add-to-cart="addToCart" headphones="headphones"></add-to-cart>
 		</div>
 	</div>
