Moved about, added text shadow, fixed titles

--- a/client/components/stores/stores.component.html
+++ b/client/components/stores/stores.component.html
@@ -1,5 +1,5 @@
-<div class="cover_img" style="height: 156px; background-position: inherit;">
-    <div class="foryou_title" style=" width: 260px; margin-top: 58px;">
+<div class="cover_img small_cover">
+    <div class="cover_title margin_title" style="width: 260px;">
         <canvas id="titlecanvas" height="100" width="400"></canvas>
     </div>
 </div>
