--- a/client/components/home/home.component.html
+++ b/client/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="">
 	<div class="cover_img">
-		<div class="foryou_title"><canvas id="myCanvas" height="100" width="400"></canvas></div>
+		<div class="cover_title"><canvas id="ForYouCanvas" height="100" width="400"></canvas></div>
 	</div>
 	<h3 class="homeTitle">Meet our Exclusive collection</h3>
 	<div layout="row">
@@ -13,4 +13,33 @@
 		<headphones-item ng-if="ctrl.recommend" flex headphones="ctrl.recommend" add-to-cart="ctrl.addToCart" show-price="ctrl.showPrice">
 		</headphones-item>
 	</div>
+	<div class="cover_img small_cover">
+		<div class="cover_title margin_title" style=" width: 260px;"><canvas id="AboutCanvas" height="100" width="400"></canvas></div>
+	</div>
+	<div class="about-container" layout="row" layout-align="space-around">
+		<div class="aboutContent">
+			Nowadays, Headphones are one of the best sellers in the world. Our website offers a wide
+			variety of headphones for sale from dozen of different brands, noise canceling levels and 
+			for good prices.
+			<br>
+			<label class="ShadowTitle">Our Brands</label>
+			<br><span class="headphonesCategory">Bose:</span> Founded in 1964. Designs, develops and sells audio equipment. 
+			The best known for its home audio systems and speakers, noise cancelling headphones, professional audio systems and automobile sound systems.
+			<br><span class="headphonesCategory">JBL:</span> Manufactures loudspeaker and associated
+			electronics. There are two independent divisions within the company – JBL Consumer and JBL Professional. The former
+			produces audio equipment for the consumer home market while the latter produces professional equipment for the studio,
+			installed sound, tour sound, portable sound (production and DJ), and cinema markets. 
+			<br><span class="headphonesCategory">AKG Acoustics:</span>Founded in 1947 by Dr. Rudolf Görike and Ernest Plass, headquartered in Vienna, Austria and owned by Samsung Electronics
+			through its Harman division.
+			<br><span class="headphonesCategory">Beats:</span> Beats by Dr. Dre is a division of Apple Inc. that produces audio products. The
+			company was founded by music producer and rapper Dr. Dre and Interscope Records co-founder Jimmy Iovine.
+		</div>
+	</div>
+</div>
+<br><br>
+<div layout="row" layout-align="space-around">
+	<video width="480" height="300" controls>
+		<source src="public/Videos/Headphones.mp4" type="video/mp4">
+	</video>
+</div>
 </div>
