--- a/client/components/manager.statistics/manager.statistics.component.html
+++ b/client/components/manager.statistics/manager.statistics.component.html
@@ -1,13 +1,13 @@
-<div class="cover_img" style="height: 156px; background-position: inherit;">
-    <div class="foryou_title" style=" width: 230px; margin-top: 58px;">
+<div class="cover_img small_cover">
+    <div class="cover_title margin_title" style="width: 230px;">
         <canvas id="titlecanvas" height="100" width="400"></canvas>
     </div>
 </div>
-<div>
+<div layout-padding>
     <h4>Segmentation of headphones brands</h4>
     <nvd3 options="ctrl.options" data="ctrl.headphones"></nvd3>
 </div>
-<div ng-if="ctrl.headphonesByLevels">
+<div layout-padding ng-if="ctrl.headphonesByLevels">
     <h4>Segmentation of noise canceling levels</h4>
     <nvd3 options="ctrl.barOptions" data="ctrl.headphonesByLevels"></nvd3>
 </div>
