--- a/server/views/index.html
+++ b/server/views/index.html
@@ -10,17 +10,14 @@
 	</head>
     <body>
         <header class="header" layout="row">
-            <div class="cart-btn">
-               <cart-icon></cart-icon>             
-            </div>
+            
             <div flex="15" class="">
                 <a ui-sref="home"><img src="public/Images/Icon.png" width="200"/></a>
             </div>
-			<nav flex="60" layout="row" layout-align="start center" class="headphones-store-nav-bar">
+			<nav flex="80" layout="row" layout-align="start center" class="headphones-store-nav-bar">
 				<li><a ui-sref="home" ui-sref-active="active"> Home </a></li>
                 <li><a ui-sref="headphones" ui-sref-active="active"> All Headphones </a></li>
                 <li><a ui-sref="stores" ui-sref-active="active"> Stores </a></li>
-				<li><a ui-sref="about" ui-sref-active="active"> About Us </a></li>
                 <md-menu md-offset="0 40">
                     <a ng-mouseenter="$mdMenu.open()">Management</a>
                     <md-menu-content ng-mouseleave="$mdMenu.close()">
@@ -36,11 +33,14 @@
                     </md-menu-content>
                 </md-menu>
             </nav>
+            <div class="cart-btn" flex="5" layout="column" layout-align="center center">
+                <cart-icon></cart-icon>             
+            </div>
         </header>
-        <section class="mainView" ui-view="">
+        <section class="mainView" ui-view="" flex>
         </section>
         <footer class="footer">
-            <p>&copy; 2018 - Ori Blau, Sagi Yosef, Noam Vaisbuch and Roni Megidish</p>
+        <p>&copy; 2018 - Ori Blau, Sagi Yosef, Noam Vaisbuch and Roni Megidish</p>
         </footer>
         
         <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
