--- a/public/style.css
+++ b/public/style.css
@@ -57,6 +57,57 @@ div.cover_img.small_cover{
 	background-position: inherit;
 }
 
+.headphones-store-nav-bar{
+    padding: 5px;
+}
+.headphones-store-nav-bar li{
+	cursor: pointer;
+	display: inline-block;
+	list-style: none;
+	margin-right: 10px;
+	min-width: 100px;
+    padding: 5px;
+	text-align: center;
+}
+.headphones-store-nav-bar li:hover {
+	border-bottom: 3px solid #8d90f7;
+}
+
+.headphones-store-nav-bar li:hover > a {
+	border-bottom: none;
+}
+
+ .active {
+	font-weight: 800;
+	padding-bottom:3px;
+	border-bottom: 3px solid #3C42EE;
+ }
+
+.headphones-store-nav-bar li a{
+	text-decoration: none;
+	color: black;
+}
+
+.manage-nav-menu {
+	background-color: rgba(250, 250, 250, 0.85);
+	list-style-type: none;
+	margin: 0;
+	opacity: 1;
+	padding: 0;
+	position: absolute;	
+	visibility: visible;
+	z-index: 100000;
+}
+
+.manage-nav-menu li {
+	display: block;
+}
+
+.nav-menu-option-manager:hover .manage-nav-menu {
+	opacity: 1;
+	visibility: visible;
+}
+
 /* Home Page */
 .cover_img{
     background-size: cover;
@@ -119,50 +170,7 @@ a, a:hover, a:focus{
     height: 210px;
     width: 100%;
 }
-.headphones-store-nav-bar{
-    padding: 5px;
-}
-.headphones-store-nav-bar li{
-	cursor: pointer;
-	display: inline-block;
-	list-style: none;
-	margin-right: 10px;
-	min-width: 100px;
-    padding: 5px;
-	text-align: center;
-}
-.headphones-store-nav-bar li:hover {
-	background-color: #dadada;
-}
 
-.active {
-	font-weight: 800;
-}
-
-.headphones-store-nav-bar li a{
-	text-decoration: none;
-	color: black;
-}
-
-.manage-nav-menu {
-	background-color: rgba(250, 250, 250, 0.85);
-	list-style-type: none;
-	margin: 0;
-	opacity: 1;
-	padding: 0;
-	position: absolute;	
-	visibility: visible;
-	z-index: 100000;
-}
-
-.manage-nav-menu li {
-	display: block;
-}
-
-.nav-menu-option-manager:hover .manage-nav-menu {
-	opacity: 1;
-	visibility: visible;
-}
 .headphones-filters{
 	width: 600px;
 	margin: 5px auto 30px auto;
