--- a/client/components/home/home.component.html
+++ b/client/components/home/home.component.html
@@ -16,7 +16,7 @@
 	<div class="cover_img small_cover">
 		<div class="cover_title margin_title" style=" width: 260px;"><canvas id="AboutCanvas" height="100" width="400"></canvas></div>
 	</div>
-	<div class="about-container" layout="row" layout-align="space-around">
+	<div class="about-container" layout="row" layout-align="space-around" layout-padding> 
 		<div class="aboutContent">
 			Nowadays, Headphones are one of the best sellers in the world. Our website offers a wide
 			variety of headphones for sale from dozen of different brands, noise canceling levels and 
@@ -36,8 +36,7 @@
 		</div>
 	</div>
 </div>
-<br><br>
-<div layout="row" layout-align="space-around">
+<div layout="row" layout-align="space-around" layout-padding>
 	<video width="480" height="300" controls>
 		<source src="public/Videos/Headphones.mp4" type="video/mp4">
 	</video>
