--- a/client/components/stores/stores.component.html
+++ b/client/components/stores/stores.component.html
@@ -25,8 +25,14 @@
 <div class="store_container" layout="row" layout-align="space-around center">
     <div class="store_list">
         <md-list class="stores md-dense" flex>
+            <md-list-item ng-if="ctrl.stores.length > 0">
+                    <label>{{ctrl.stores.length}} results were found</label>
+            </md-list-item>
             <md-list-item ng-repeat="store in ctrl.stores" class="md-3-line">
                     <Store store="store"></Store>
+            </md-list-item>
+            <md-list-item ng-if="ctrl.stores.length == 0">
+                <label>No results were found.</label>
             </md-list-item>
         </md-list>
     </div>
