Fixed dialogs UI

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -25,7 +25,7 @@
                             <md-button ui-sref="manager-headphones"> Manage Headphones </md-button>                            
                         </md-menu-item>                  
                         <md-menu-item>
-                            <md-button ui-sref="manager-headphonestypes"> Manage Headphones Types </md-button>
+                            <md-button ui-sref="manager-headphonestypes"> Manage Headphones Brands </md-button>
                         </md-menu-item>
                         <md-menu-item>
                             <md-button ui-sref="manager-statistics"> Statistics </md-button>
