--- a/client/pages/templates/addEdit.html
+++ b/client/pages/templates/addEdit.html
@@ -2,12 +2,12 @@
         <form name="headphonesForm" class="add-edit-headphones-dialog"> 
     <!-- <md-toolbar> -->
         <div class="title-wrapper">
-            <h1>{{ctrl.title}}</h1>
+            <h1>{{ctrl.title}} Headphone</h1>
             <md-button class="close-dialog md-primary mdraised" ng-click="ctrl.close()">X</md-button>
         </div>
     <!-- </md-toolbar> -->
-    <md-dialog-content class="container">
-        
+    <md-dialog-content class="container" layout-padding> 
+        <div>
             <md-input-container>
                 <label>Name</label>
                 <input type="text" name="headphonesName" required ng-model="ctrl.headphones.name">
@@ -16,7 +16,7 @@
                 </div>
             </md-input-container>
             <md-input-container>
-                <label>Type</label>
+                <label>Brand</label>
                 <md-select name="headphonesType" ng-model="ctrl.headphones.headphonesType" required>
                     <md-option ng-repeat="type in ctrl.headphonesTypes" ng-value="type.name">
                         {{type.name}}
@@ -53,10 +53,10 @@
                 <input type="file" class="image-uploader-button" ngf-select ng-model="ctrl.headphonesImage" required name="file" aria-label="add image" accept="image/*" ngf-max-size="5MB" />
                 <p>{{ctrl.headphonesImage.name}}</p>
             </md-input-container>
-            <div>
+            <div layout="row" layout-align="center center">
                 <md-button class="md-primary md-raised" ng-disabled="headphonesForm.$invalid" ng-click="ctrl.save()">Save</md-button>
             </div>
-        
+        </div>
     </md-dialog-content>
 </form>
 <!-- </section> -->
