--- a/client/pages/templates/addHeadphonesType.html
+++ b/client/pages/templates/addHeadphonesType.html
@@ -1,9 +1,9 @@
 <form name="ctrl.headphonesTypeForm" class="add-edit-headphones-dialog"> 
     <div class="title-wrapper">
-        <h1>{{ctrl.title}}</h1>
+        <h1>Add New Brand</h1>
         <md-button class="close-dialog md-primary md-raised" ng-click="ctrl.close()">X</md-button>
     </div>
-    <md-dialog-content class="container">
+    <md-dialog-content class="container" layout-padding>
         <md-input-container>
             <label>Name</label>
             <input type="text" name="headphonesTypeName" required ng-change="ctrl.refreshValidation()" ng-model="ctrl.headphonesType.name">
@@ -12,7 +12,7 @@
                 <div ng-show="ctrl.isAlreadyExists">The name already exists</div>
             </div>
         </md-input-container>
-        <div>
+        <div layout="row" layout-align="center center">
             <md-button class="md-primary md-raised" ng-disabled="headphonesTypeForm.$invalid" ng-click="ctrl.save()">Save</md-button>
         </div>
     </md-dialog-content>
